--- a/TEMA1/package.json
+++ b/TEMA1/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^4.2.0-beta.1",
     "@angular/platform-server": "^4.2.0-beta.1",
     "@angular/router": "^4.2.0-beta.1",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
